--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=MinecraftPlugin
+application.vendor=anis_sayed
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/MinecraftPlugin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.spigot-1.8.8-R0.1-SNAPSHOT-latest.jar=C:\\Users\\anis\\AppData\\Roaming\\.minecraft\\spigot-1.8.8-R0.1-SNAPSHOT-latest.jar
 includes=**
@@ -60,7 +62,7 @@ main.class=server.TaahThePhoenix.MinecraftPlugin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.7
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
